<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.account.orders.OrdersFragment">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarAlwaysDrawHorizontalTrack="true">

            <TableLayout
                android:id="@+id/table_of_orders"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:showDividers="middle">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="16dp"
                        android:text="@string/order_id"
                        android:textColor="@color/primary_text_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="16dp"
                        android:text="@string/names_of_products"
                        android:textColor="@color/primary_text_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="16dp"
                        android:text="@string/status"
                        android:textColor="@color/primary_text_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="16dp"
                        android:text="@string/order_sent_time"
                        android:textColor="@color/primary_text_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="16dp"
                        android:text="@string/price"
                        android:textColor="@color/primary_text_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>

        </HorizontalScrollView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</layout>